--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "license": "MIT",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@types/uuid": "^9.0.8",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.23.0",
     "reflect-metadata": "^0.2.2",
-    "type-graphql": "2.0.0-rc.1"
+    "type-graphql": "2.0.0-rc.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
+    "tsyringe": "^4.8.0",
     "typescript": "^5.4.5"
   }
 }
