--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "@types/uuid": "^9.0.8",
+    "express": "^4.19.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.23.0",
     "reflect-metadata": "^0.2.2",
     "type-graphql": "2.0.0-rc.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.8.0",
     "typescript": "^5.4.5"
