--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "graphql-scalars": "^1.23.0",
     "reflect-metadata": "^0.2.2",
     "type-graphql": "2.0.0-rc.1",
+    "typeorm": "^0.3.20",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "sqlite3": "^5.1.7",
     "ts-node-dev": "^2.0.0",
     "tsyringe": "^4.8.0",
     "typescript": "^5.4.5"
