finish setup repo
implement create member and get list member

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "@types/uuid": "^9.0.8",
+    "class-validator": "^0.14.1",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.23.0",
